# Acme-Operations-Agent-Application

./: .env.example  .gitignore  README.md  docker-compose.yml
acme-ops-agent/: Dockerfile  pyproject.toml
acme-ops-agent/alembic/: env.py
acme-ops-agent/alembic/versions/: 97b1ddf51c6c_create_app_roles_and_users.py
acme-ops-agent/scripts/: db_entrypoint.sh
acme-ops-agent/src/acme_ops_agent/: config.py  py.typed
acme-ops-agent/src/acme_ops_agent/agent/: graph.py  graph_builder.py  mcp_client.py  observability.py  prompts.py  service.py  state.py  tool_adapter.py
acme-ops-agent/src/acme_ops_agent/agent/cache/: __init__.py  redis_client.py
acme-ops-agent/src/acme_ops_agent/agent/evaluation/: __init__.py  background_task.py  langsmith_feedback.py  prompts.py  scorer.py  scores.py
acme-ops-agent/src/acme_ops_agent/agent/graph/: __init__.py  conditions.py  registry.py  routing.py
acme-ops-agent/src/acme_ops_agent/agent/mcp_client/: __init__.py  client_connection.py  result_parser.py  transport.py
acme-ops-agent/src/acme_ops_agent/agent/nodes/: __init__.py  input_guardrail_node.py  react_agent_node.py  router_node.py  skill_node.py  tool_node.py
acme-ops-agent/src/acme_ops_agent/agent/prompts/: __init__.py  router.py  system.py
acme-ops-agent/src/acme_ops_agent/agent/shared/: fallback_response.py  memory.py  skill_limits.py  state.py  tool_adapter.py
acme-ops-agent/src/acme_ops_agent/agent/skills/: __init__.py  escalation_summary.py
acme-ops-agent/src/acme_ops_agent/api/: app.py  auth.py
acme-ops-agent/src/acme_ops_agent/api/middleware/: observability.py
acme-ops-agent/src/acme_ops_agent/api/routes/: chat.py  me.py
acme-ops-agent/src/acme_ops_agent/auth/: keycloak.py  rbac.py
acme-ops-agent/src/acme_ops_agent/common/: enums.py  exceptions.py
acme-ops-agent/src/acme_ops_agent/db/migrations/: seed_business_data.py  seed_users.py
acme-ops-agent/src/acme_ops_agent/db/models/: __init__.py  business.py  user.py
acme-ops-agent/src/acme_ops_agent/db/repositories/: business_read_repository.py  business_write_repository.py  user_repository.py
acme-ops-agent/src/acme_ops_agent/mcp/: server.py
acme-ops-agent/src/acme_ops_agent/mcp/tools/: business_tools.py  tool_registry.py
acme-ops-agent/src/acme_ops_agent/schema/: auth_schema.py  business_schema.py
acme-ops-agent/src/acme_ops_agent/services/: auth_context_service.py  business_service.py
acme-ops-agent/src/acme_ops_agent/utils/: logger.py
acme-ops-backend/: Dockerfile  README.md  pyproject.toml
acme-ops-backend/src/acme_ops_backend/: __init__.py  config.py
acme-ops-backend/src/acme_ops_backend/agent/: graph_builder.py  service.py
acme-ops-backend/src/acme_ops_backend/agent/cache/: __init__.py  conversation_memory.py  redis_client.py  tool_cache.py
acme-ops-backend/src/acme_ops_backend/agent/evaluation/: __init__.py  background_task.py  langsmith_feedback.py  prompts.py  scorer.py  scores.py
acme-ops-backend/src/acme_ops_backend/agent/graph/: __init__.py  conditions.py  registry.py  routing.py
acme-ops-backend/src/acme_ops_backend/api/: app.py  auth.py
acme-ops-frontend/: README.md  (+2 more)
acme-ops-mcp/: Dockerfile  README.md  pyproject.toml
acme-ops-mcp/src/acme_ops_mcp/: __init__.py
acme-ops-mcp/src/acme_ops_mcp/mcp/: dependencies.py  server.py
acme-ops-shared/: README.md  pyproject.toml
acme-ops-shared/alembic/: env.py
acme-ops-shared/alembic/versions/: 35b4fd9dc5f3_create_business_tables.py  97b1ddf51c6c_create_app_roles_and_users.py
acme-ops-shared/scripts/: db_entrypoint.sh
acme-ops-shared/src/acme_ops_shared/: __init__.py  config.py
acme-ops-shared/src/acme_ops_shared/auth/: keycloak.py  rbac.py
acme-ops-shared/src/acme_ops_shared/common/: enums.py  exceptions.py
acme-ops-shared/src/acme_ops_shared/db/: session.py
acme-ops-shared/src/acme_ops_shared/schema/: auth_schema.py  business_schema.py  chat_schema.py
acme-ops-shared/src/acme_ops_shared/services/: auth_context_service.py  business_service.py
acme-ops-shared/src/acme_ops_shared/utils/: logger.py
streamlit-app/: Dockerfile  README.md  pyproject.toml
streamlit-app/src/streamlit_app/: app.py  config.py
streamlit-app/src/streamlit_app/auth/: oauth.py  session.py
streamlit-app/src/streamlit_app/client/: api_client.py
streamlit-app/src/streamlit_app/ui/: assistant.py  login.py
streamlit-app/src/streamlit_app/utils/: logger.py
(+54 files in other folders)
