[project]
name = "acme-ops-agent"
version = "0.1.0"
description = "Agentic assistant for Acme Operations"
readme = "README.md"
authors = [
    { name = "Karthikeyan Sivakumar", email = "126179797+Karthi-DStech@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "mcp>=1.27.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
    "wait-for-it>=2.3.0",
]

[project.scripts]
acme-ops-agent = "acme_ops_agent:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
