[project]
name = "acme-ops-backend"
version = "0.1.0"
description = "Acme Operations Backend Service (REST API and Agentic Assistant)"
readme = "README.md"
authors = [
    { name = "CodeByKarthik", email = "karthinottsuk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "acme-ops-shared",
    "fastapi>=0.136.3",
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "redis>=8.0.0",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
    "mcp>=1.27.1"
]

[tool.uv.sources]
acme-ops-shared = { path = "../acme-ops-shared", editable = true }

[project.scripts]
acme-ops-backend = "acme_ops_backend:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
