[project]
name = "acme-ops-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CodeByKarthik", email = "karthinottsuk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.3.1",
    "mcp>=1.27.1",
    "acme-ops-shared"
]

[tool.uv.sources]
acme-ops-shared = { path = "../acme-ops-shared", editable = true }

[project.scripts]
acme-ops-mcp = "acme_ops_mcp:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
