[project]
name = "acme-ops-shared"
version = "0.1.0"
description = "Shared package for Acme Operations (db, auth, schema, services)"
readme = "README.md"
authors = [
    { name = "Karthikeyan Sivakumar", email = "126179797+Karthi-DStech@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "sqlalchemy>=2.0.50",
    "structlog>=25.5.0",
    "wait-for-it>=2.3.0",
]

[project.scripts]
acme-ops-shared = "acme_ops_shared:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
