[project]
name = "streamlit-app"
version = "0.1.0"
description = "Frontend application for Acme Ops Agent Application"
readme = "README.md"
authors = [
    { name = "Karthikeyan Sivakumar", email = "126179797+Karthi-DStech@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[project.scripts]
streamlit-app = "streamlit_app:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
